--- a/style.css
+++ b/style.css
@@ -540,7 +540,7 @@ nav .fa-solid{
 
     .about-col-1 , .about-col-2{
         flex-basis: 100%;
-        margin: auto;
+        margin-left: 0;
 
     }
     .about-col-1{
