--- a/style.css
+++ b/style.css
@@ -529,9 +529,35 @@ nav .fa-solid{
     nav ul .fa-solid{
         position: absolute;
         top: 25px;
-        left: 25px;
+        right: 18px;
         cursor: pointer;
     }
+
+    #sidemenu {
+        position: fixed;
+        top: 0;
+        right: -300px; /* Start with the menu off-screen */
+        width: 250px;
+        height: 100vh;
+        background-color: #0d0c0c;
+        padding: 20px;
+        transition: transform 0.3s ease-out;
+      }
+      
+      #sidemenu.open {
+        transform: translateX(-300px); /* Slide the menu into view */
+      }
+      
+      .fa-bars {
+        /* Add appropriate styling for your menu icon */
+        cursor: pointer;
+      }
+      
+      .fa-xmark {
+        /* Add appropriate styling for your close icon */
+        cursor: pointer;
+      }
+      
 
     .sub-title{
         font-size: 40px;
@@ -540,9 +566,7 @@ nav .fa-solid{
 
     .about-col-1 , .about-col-2{
         flex-basis: 100%;
-
-        margin: auto;
-        
+        margin: auto;   
 
     }
 
